Add terrain, and fix compiling issues with maven